--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 2px;
 }
 
+.giffygram {
+    margin-bottom: 50px;
+}
+
 .actionIcon {
     height: 1.2em;
     margin: 0.5em 0.5em;
