--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -49,12 +49,26 @@
 }
 
 .post {
-    margin: 0 25%;
+    margin: 0 25% 1em 25%;
     flex-basis: 50%;
+    background: hsla(183, 79%, 89%, 1);
+    background: linear-gradient(180deg, hsla(183, 79%, 89%, 1) 0%, hsla(49, 89%, 50%, 1) 100%);
+    background: -moz-linear-gradient(180deg, hsla(183, 79%, 89%, 1) 0%, hsla(49, 89%, 50%, 1) 100%);
+    background: -webkit-linear-gradient(180deg, hsla(183, 79%, 89%, 1) 0%, hsla(49, 89%, 50%, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#ccf7f9", endColorstr="#f1c80f", GradientType=1 );
+    padding: 10px 20px 20px 20px;
+    border-radius: 2px;
+    box-shadow: 5px 5px #00D7DF;
+}
+
+.post__title {
+    margin: 0;
+    padding: 0;
 }
 
 .post__image {
     width: 100%;
+    border-radius: 2px;
 }
 
 .post__actions {
