adjusted button margins

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,86 +7,91 @@
 --------------------------------------------------------------*/
 
 body {
-    color: #404040;
-    font-family: "Comfortaa", Arial, sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
-    padding: 0;
-    margin: 0;
+  color: #404040;
+  font-family: "Comfortaa", Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
 }
 
-input, select, textarea {
-    color: #404040;
-    font-family: "Comfortaa", Arial, sans-serif;
-    font-size: 1rem;
-    line-height: 1;
-    padding: 5px;
-    margin: 0;
-    background-color: #ddfafc;
-    border-radius: 3px;
+input,
+select,
+textarea {
+  color: #404040;
+  font-family: "Comfortaa", Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1;
+  padding: 5px;
+  margin: 0;
+  background-color: #ddfafc;
+  border-radius: 3px;
 }
 
 button {
-    color: #404040;
-    font-family: "Comfortaa", Arial, sans-serif;
-    font-size: 1rem;
-    line-height: 1;
-    padding: 5px;
-    margin: 0;
-    background-color: #ddfafc;
-    border-width: 1px;
-    border-radius: 3px;
-    box-shadow: 5px 5px #00D7DF;
+  color: #404040;
+  font-family: "Comfortaa", Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1;
+  padding: 5px;
+  margin: 0 10px 10px 0;
+  background-color: #ddfafc;
+  border-width: 1px;
+  border-radius: 3px;
+  box-shadow: 5px 5px #00d7df;
 }
 
 button:active {
-    color: #404040;
-    font-family: "Comfortaa", Arial, sans-serif;
-    font-size: 1rem;
-    line-height: 1;
-    padding: 5px;
-    margin: 0;
-    background-color: #00D7DF;
-    border-width: 1px;
-    border-radius: 3px;
-    box-shadow: none;
+  color: #404040;
+  font-family: "Comfortaa", Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1;
+  padding: 5px;
+  margin: 0 10px 10px 0;
+  background-color: #00d7df;
+  border-width: 1px;
+  border-radius: 3px;
+  box-shadow: none;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Patua One", serif;
-    letter-spacing: 2px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Patua One", serif;
+  letter-spacing: 2px;
 }
 
 .giffygram {
-    margin-bottom: 50px;
-    margin-top: 70px;
+  margin-bottom: 50px;
+  margin-top: 70px;
 }
 
 .actionIcon {
-    height: 1.2em;
-    margin: 0.5em 0.5em;
-    cursor: pointer;
+  height: 1.2em;
+  margin: 0.5em 0.5em;
+  cursor: pointer;
 }
 
 .highlight {
-    border-color: purple;
+  border-color: purple;
 }
 
 .fakeLink {
-    color: -webkit-link;
-    cursor: pointer;
-    text-decoration: underline;
-    background: none!important;
-    border: none;
-    cursor: pointer;
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
+  background: none !important;
+  border: none;
+  cursor: pointer;
 }
 
 .fakeLink:hover {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .loginForm {
-    margin: 0 25%;
+  margin: 0 25%;
 }
-
